# table2string

./: LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: codecov.yml  publish.yml  tests.yml
table2string/: __init__.py  aligns.py  table2string.py  text_splitters.py  text_styles.py  themes.py  utils.py
tests/: test_align.py  test_coefficient.py  test_errors.py  test_sep.py  test_subtable.py  test_table2string.py  test_table2text.py  test_text_splitters.py  test_text_styles.py  test_themes.py  test_utils.py  test_widths.py
