[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "table2string"
version = "2.0.1"
description = "A library to convert tables to string with full support for line breaks and formatting"
authors = [{name = "EgorKhabarov", email = "not.a.fan.of.broccoli@gmail.com"}]
license = {text = "GPL2"}
readme = "README.md"
requires-python = ">=3.7"
keywords = ["table", "string", "tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/EgorKhabarov/table2string"
Documentation = "https://github.com/EgorKhabarov/table2string"
Repository = "https://github.com/EgorKhabarov/table2string"
Issues = "https://github.com/EgorKhabarov/table2string/issues"

[tool.hatch.build.targets.wheel]
include = ["table2string/*"]
